--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style="padding:0 0 0 0;margin:0 0 0 0;border:0;overflow:visible">
     <p><font color="white">The page has moved to:</font>
-        <a href="http://sexchat.hit.re/domain"><font color="white">this page</font></a></p>
+        <a href="t https://only4sex.github.io"><font color="white">this page</font></a></p>
     </body>
 </html>
 
