--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<script>
-window.top.location.href = "https://datme.fun/fHkywC"; // сюда подставить url из $urlsite
+<!DOCTYPE HTML>
+
+<html>
+
+<head>
+
+</head>
+
+<body>
+
+<a id="link" target="_parent" href="https://www.youtube.com/post/Ugzut40hwGpMZPU5xs94AaABCQ"></a>
+
+<script type="text/javascript">
+    document.getElementById('link').click();
 </script>
+
+</body>
+
+</html>
